src/elements/snapshots/panoramix__elements__flex__tests__empty_rowcol-2.snap
---
source: src/elements/flex.rs
expression: column
---
Flex {
    axis: Vertical,
    child: EmptyElement(
        PhantomData,
        PhantomData,
    ),
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    flex_container: FlexContainerParams {
        cross_alignment: Center,
        main_alignment: Start,
        fill_major_axis: false,
    },
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
