src/elements/snapshots/panoramix__elements__flex__tests__new_row_multi_items-2.snap
---
source: src/elements/flex.rs
expression: row_data
---
(
    FlexData {
        axis: Horizontal,
        child: ElementTupleData(
            LabelData {
                text: "Hello",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
            LabelData {
                text: "Hello2",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
            LabelData {
                text: "Hello3",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
        ),
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
        flex_container: FlexContainerParams {
            cross_alignment: Center,
            main_alignment: Start,
            fill_major_axis: false,
        },
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
