src/elements/snapshots/panoramix__elements__flex__tests__new_rowcol_single_item-4.snap
---
source: src/elements/flex.rs
expression: column_data
---
(
    FlexData {
        axis: Vertical,
        child: ElementTupleData(
            LabelData {
                text: "Greetings",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
        ),
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
        flex_container: FlexContainerParams {
            cross_alignment: Center,
            main_alignment: Start,
            fill_major_axis: false,
        },
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
